# reflector

./: CMakeLists.txt  README.md
src/reflector/: compare.hh  dummy.cc  enums.hh  hash.hh  helper.hh  introspect.hh  macros.hh  member_compare.hh  members.hh  to_string.hh  xlist.hh
src/reflector/detail/: hashify.hh  is_introspectable.hh  null_inspector.hh  stringify.hh
